<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="superHero"
            type="com.example.registrodesuperheroesj.SuperHero" />


    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="24dp"
        tools:context=".MainActivity"
        tools:ignore="ExtraText">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/super_hero_register_title_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.cardview.widget.CardView
            android:id="@+id/card"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_marginStart="24dp"
            android:translationZ="4dp"
            app:cardCornerRadius="30dp"

            app:cardElevation="16dp"
            app:layout_constraintBottom_toTopOf="@id/tv_bio"
            app:layout_constraintEnd_toStartOf="@id/etNameMa"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title">

            <ImageView
                android:id="@+id/ivLogoSuperheroMa"
                android:layout_width="150dp"
                android:layout_height="150dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_camera_app" />
        </androidx.cardview.widget.CardView>


        <EditText
            android:id="@+id/etNameMa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/superhero_nombre"
            android:text="@={superHero.name}"
            android:textColorHint="#546E7A"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card"
            app:layout_constraintTop_toTopOf="@id/card"
            tools:ignore="TouchTargetSizeCheck" />

        <EditText
            android:id="@+id/etAlterEgoMa"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="24dp"
            android:layout_marginBottom="16dp"
            android:hint="@string/superhero_alterego_et"
            android:minHeight="48dp"
            android:text="@={superHero.alterEgo}"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toBottomOf="@id/card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/card" />

        <View
            android:id="@+id/line"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card" />

        <TextView
            android:id="@+id/tv_bio"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/superhero_biography_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/etDescriptionMa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/line" />

        <EditText
            android:id="@+id/etDescriptionMa"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:hint="@string/superhero_description_tv"
            android:padding="16dp"
            android:text="@={superHero.description}"
            android:textColorHint="#546E7A"
            app:layout_constraintBottom_toTopOf="@id/tv_power"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_bio" />


        <TextView
            android:id="@+id/tv_power"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="8dp"
            android:text="@string/superhero_power_tv"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/ratingBarMa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/etDescriptionMa" />


        <RatingBar
            android:id="@+id/ratingBarMa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:numStars="5"
            android:progressTint="@color/copper"
            android:rating="@={superHero.rating}"
            android:stepSize="1"
            app:layout_constraintBottom_toTopOf="@id/buttonStorage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_power" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonStorage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="4dp"
            android:text="@string/storage_btn"
            android:textAllCaps="false"
            android:textColor="@color/casablanca"
            android:translationZ="4dp"
            app:backgroundTint="@color/colorButtonBackground"
            app:cornerRadius="8dp"
            app:iconPadding="8dp"
            app:iconTint="@color/casablanca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBarMa"
            app:rippleColor="@color/amber"
            app:strokeColor="@color/copper"
            app:strokeWidth="2dp" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonClear"
            android:layout_width="60dp"
            android:layout_height="60dp"
            android:elevation="4dp"
            android:text="+"
            android:textAllCaps="false"
            android:textColor="@color/casablanca"
            android:translationZ="4dp"
            app:backgroundTint="@color/luckyPoint"
            app:cornerRadius="8dp"
            app:iconPadding="8dp"
            app:iconTint="@color/casablanca"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ratingBarMa"
            app:rippleColor="@color/material_dynamic_neutral_variant90"
            app:strokeColor="@color/cardview_shadow_end_color"
            app:strokeWidth="2dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>